--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>6.0.6</version>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.10</version>
     </dependency>
     <dependency>
       <groupId>com.budhash.cliche</groupId>
